wrapped up main issues

--- a/index.css
+++ b/index.css
@@ -118,14 +118,8 @@
     line-height: 1.5;
 }
 
-/* @media only screen and (max-width: 1px) {
-    #bio-header {
-        width: 100px;
-    }
-} */
-
 #project-header-container {
-    margin: auto 0px;
+    margin: auto 50px;
 }
 
 #project-header-container h1 {
@@ -167,6 +161,8 @@
     justify-items: center;
     align-items: center;
     margin: auto 0px;
+    /* position: relative; */
+    overflow: auto;
 }
 
 .project-container h1 {
@@ -300,12 +296,16 @@ color: white;
     letter-spacing: 4px;
     font-weight: bolder;
     font-size: 50px;
-    color: rgb(110, 110, 110);
+    color: rgb(100, 100, 100);
 }
 
 #section-three hr {
     border: solid 1px rgb(185, 185, 185);
     margin-bottom: 50px;
+}
+
+.my-resume {
+    overflow: hidden;
 }
 
 
@@ -318,6 +318,7 @@ color: white;
     padding: 80px 0px;
     font-size: 20px;
     display: flex;
+
 } 
 
 #section-four h1 {
@@ -328,6 +329,7 @@ color: white;
 }
 
 .contact-left {
+    margin: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -336,9 +338,11 @@ color: white;
 
 .contact-right {
     display: flex;
-    /* justify-content: center; */
+    margin: 10px;
     align-items: center;
     margin-top: 20px;
+    position: relative;
+    overflow: hidden;
 }
 
 .icon {
@@ -357,7 +361,7 @@ li a {
 }
 
 li {
-    margin: 40px;
+    margin: 40px 0px;
 }
 
 li :hover {
